--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="navbar">
                     <div class="logo">
-                        <h3>Velocity</h3>
+                        <h3>Bexa DeV</h3>
                     </div>
                     <div class="menu_section">
                         <ul>
