changed all file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="menu_section">
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Lider</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
