changed all file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="menu_section">
                         <ul>
                             <li><a href="#">Lider</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#"></a>quvonchbekka</li>
                         </ul>
                     </div>
                 </div>
